# paypaypythonsystem

./: README.md  pyproject.toml
src/: __init__.py  error.py  headers.py  paypay.py  status.py  types.py  utils.py
tests/: test_utils.py
